--- a/app/views/layouts/_task_form.html.erb
+++ b/app/views/layouts/_task_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row ml-3">
     <div class="offset-md-3 col-md-6 offset-md-3">
-      <%= form_tag(tasks_path, method: "post", class: "form", id: "contact-form", remote: true)  do %>
+      <%= form_tag(tasks_path, method: "post", class: "form", id: "contact-form", remote: user_signed_in?)  do %>
         <div class="form-group">
           <%= label_tag "Task", nil, class: "form-label" %>
           <%= text_field_tag :title, nil, class: "form-control", placeholder: "Buy burgers" %>
