--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
 <h1 class="text-center mb-4">Welcome to my todolist app</h1>
 <%= render 'layouts/task_form'  %>
 <div class="container">
-<%= render "tasks/task_list2"%>
+  <%= render "tasks/task_list2"%>
 </div>
-
+<p>Test </p>
 <div class="container">
   <div class="row">
     <% @tasks.each do |task|  %>
