--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
   <body>
     <%= render 'layouts/navbar'  %>
     <%= render 'layouts/flash'  %>
-    <%= yield %>
+    <section>
+      <%= yield %>
+    </section>
   </body>
 </html>
