--- a/app/views/emails/_emails_list.html.erb
+++ b/app/views/emails/_emails_list.html.erb
@@ -14,11 +14,23 @@
       </td>
       <td><%= email.body %></td>
       <% if current_user%>
-      <td><%= link_to "Supprimer", email_path(email.id), method: :delete, class:'btn btn-danger', remote:true%></td>
+      <td><%= link_to  email_path(email.id), method: :delete, class:'btn btn-danger', remote:true do%>
+      <i class="far fa-trash-alt"></i>
+            <% end %>
+
+      </td>
       <% if email.is_read? == true %>
-      <td><%= link_to "Marquer comme non lu", email_path(email.id), method: :patch, class:'btn btn-primary', remote:true%> </td>
+      <td><%= link_to  email_path(email.id), method: :patch, class:'btn btn-primary', remote:true do%>
+      <i class="far fa-envelope-open"></i>
+            <% end %>
+
+       </td>
       <% else %>
-      <td><%= link_to "Marquer comme lu", email_path(email.id), method: :patch, class:'btn btn-primary', remote:true%> </td>
+      <td><%= link_to  email_path(email.id), method: :patch, class:'btn btn-primary', remote:true do %>
+      <i class="far fa-envelope"></i>
+      <% end %>
+
+       </td>
       <% end %>
            <% end %>
     </tr>
