--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3,10 +3,14 @@ table{
 }
 
 tr{
-  height:2rem;
   border-bottom:1px rgba(0,0,0,0.1) solid;
+  height:3rem;
 }
 
-body{
+section{
   margin:3rem;
+}
+
+.btn {
+  
 }
