rien de mieux à faire en ce jeudi soir que de faire du css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require email_index
-*= require main
+ *= require main
+ *= require navbar
+
  */
