--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -1,10 +1,12 @@
 
 <% if current_user %>
 <div style='display:flex; align-items:center;gap:1rem'>
-<%= link_to emails_path, method: :post, class:'btn btn-primary', remote:true do %>
-<i class="fas fa-sync"></i>
-<% end %>
-<h3>Hello, <%= current_user.email%> </h3></div>
+  <%= link_to emails_path, method: :post, class:'btn btn-primary', remote:true do %>
+  <i class="fas fa-sync"></i>
+  <% end %>
+      <%= render 'unread_emails' %>
+
+</div>
 
 <% else %>
 <h3>Please log-in!</h3>
