ajax nb emails non lus

--- a/app/views/emails/create.js.erb
+++ b/app/views/emails/create.js.erb
@@ -5,5 +5,9 @@ function updateList(){
   console.log(table)
   let section = table.closest("section")
   table.remove()
+  let count_unread = document.querySelector('#count_unread')
+  count_unread.innerHTML = "Vous avez <%= @unread_emails %> emails non lus !"
+  console.log(count_unread.innerHTML)
+
   section.insertAdjacentHTML("beforeend", "<%= j render "emails_list" %>")
 }
