--- a/app/views/emails/_unread_emails.html.erb
+++ b/app/views/emails/_unread_emails.html.erb
@@ -1,1 +1,1 @@
-  <p style='margin:0'>Vous avez <%= @unread_emails %> emails non lus !</p>
+    <p id="count_unread" style='margin:0'>Vous avez <%= @unread_emails %> emails non lus !</p>
